--- a/index.html
+++ b/index.html
@@ -26,25 +26,17 @@
 
     .wrapper {
       display: flex;
-      width: 200vw; /* 2 pages with 3 panels each */
+      width: 100%;
       height: 100vh;
-      transition: transform 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    }
-
-    .page {
-      display: flex;
-      width: 100vw;
-      height: 100vh;
-      padding: 2vh;
-      box-sizing: border-box;
+      overflow-x: auto;
+      overflow-y: hidden;
+      scroll-snap-type: x mandatory; /* For snap scrolling */
+      scroll-behavior: smooth;
       gap: 2vw;
-      justify-content: center;
-      align-items: center;
     }
 
     .panel {
-      flex: 1;
-      min-width: 25vw;
+      min-width: 100vw; /* Full width of each panel on mobile */
       height: 90%;
       background: var(--panel-glass);
       backdrop-filter: blur(15px);
@@ -114,20 +106,30 @@
       color: var(--accent);
     }
 
-    @media (max-width: 768px) {
+    /* Styles for Desktop */
+    @media (min-width: 1024px) {
       .wrapper {
-        display: flex;
-        flex-direction: column; /* Stack pages vertically on mobile */
-        width: 100vw;
+        width: 300vw; /* 3 panels per page */
+      }
+
+      .panel {
+        min-width: 33.33vw; /* Each panel takes up 1/3 of the screen */
         height: 100vh;
       }
 
-      .page {
-        width: 100vw; /* Full width for each page */
-        height: 100vh; /* Full height for each page */
+      .nav-buttons button {
+        font-size: 0.9rem;
+        padding: 0.6rem 1rem;
+      }
+    }
+
+    /* Mobile-specific styles */
+    @media (max-width: 1023px) {
+      .wrapper {
         display: flex;
-        flex-direction: column; /* Stack panels vertically within each page */
-        padding: 0;
+        flex-direction: row; /* Keep it horizontally scrollable */
+        width: 100%;
+        height: 100%;
       }
 
       .panel {
@@ -137,111 +139,127 @@
         border-radius: 0;
         box-shadow: none;
       }
-
-      .nav-buttons button {
-        font-size: 0.9rem;
-        padding: 0.6rem 1rem;
-      }
     }
   </style>
 </head>
 <body>
 
 <div class="wrapper" id="brochureWrapper">
-  <!-- Page 1 -->
-  <div class="page">
-    <div class="panel">
-      <h2>Spices</h2>
-      <ul>
-        <li>Black & White Pepper</li>
-        <li>Cumin (Whole & Ground)</li>
-        <li>Oregano, Paprika</li>
-        <li>Garlic Powder & Salt</li>
-        <li>Cinnamon (Whole & Ground)</li>
-        <li>Tajin, Piloncillo</li>
-        <li>Sesame Seeds</li>
-        <li>Dried Peppers: Guajillo, Arbol, Puya, etc.</li>
-        <li>Spicy Peanuts, Garbanzos</li>
-        <li>Mangos w/ Chamoy, Chicharrones</li>
-      </ul>
-    </div>
-    <div class="panel">
-      <h2>Visit Us</h2>
-      <p><strong>Sylmar:</strong><br/>12239 Foothill Blvd, Sylmar, CA<br/>(818) 897-2079</p>
-      <p><strong>Bakersfield:</strong><br/>530 California Ave, Bakersfield, CA<br/>(661) 381-4722</p>
-      <p><strong>Hours:</strong><br/>Sylmar: 6AM–5PM<br/>Bakersfield: 8AM–5PM</p>
-    </div>
-    <div class="panel">
-      <h2>Graciana Tortilla</h2>
-      <p>Est. 1967</p>
-      <p>Follow us on:</p>
-      <ul>
-        <li>Facebook: @GRACIANATORTILLAFACTORY</li>
-        <li>Instagram: @GRACIANATORTILLAFACTORY</li>
-        <li>Website: gracianatortillafactory.com</li>
-      </ul>
-    </div>
+  <!-- All Panels (No Pages) -->
+  <div class="panel">
+    <h2>Spices</h2>
+    <ul>
+      <li>Black & White Pepper</li>
+      <li>Cumin (Whole & Ground)</li>
+      <li>Oregano, Paprika</li>
+      <li>Garlic Powder & Salt</li>
+      <li>Cinnamon (Whole & Ground)</li>
+      <li>Tajin, Piloncillo</li>
+      <li>Sesame Seeds</li>
+      <li>Dried Peppers: Guajillo, Arbol, Puya, etc.</li>
+      <li>Spicy Peanuts, Garbanzos</li>
+      <li>Mangos w/ Chamoy, Chicharrones</li>
+    </ul>
   </div>
 
-  <!-- Page 2 -->
-  <div class="page">
-    <div class="panel">
-      <h2>Flour Tortilla</h2>
-      <h3>Specialty</h3>
-      <ul>
-        <li>Wheat, Spinach, Tomato, Chipotle</li>
-        <li>Garlic & Herb, Achiote, Charcoal</li>
-        <li>Curry & More</li>
-      </ul>
-      <h3>Sizes</h3>
-      <ul>
-        <li>6" to 14", Sonora Style</li>
-      </ul>
-    </div>
-    <div class="panel">
-      <h2>Corn Tortilla</h2>
-      <h3>Masa Types</h3>
-      <ul>
-        <li>White, Yellow, Blue, Tamale</li>
-      </ul>
-      <h3>Chip Cuts</h3>
-      <ul>
-        <li>Pre-cut, Colored Chips (Red, Green, Blue)</li>
-      </ul>
-      <h3>Regular</h3>
-      <ul>
-        <li>6", 4"–4½" mini, Enchilada sizes</li>
-      </ul>
-    </div>
-    <div class="panel">
-      <h2>Tamales & More</h2>
-      <h3>Tamales</h3>
-      <ul>
-        <li>Beef, Chicken, Pork, Veggie</li>
-        <li>Cheese, Sweet</li>
-      </ul>
-      <h3>Other Items</h3>
-      <ul>
-        <li>Chiles Rellenos, Salsas</li>
-        <li>Telera Bread, Burger Buns</li>
-        <li>Sopes, Dressings, Tostadas</li>
-      </ul>
-    </div>
+  <div class="panel">
+    <h2>Visit Us</h2>
+    <p><strong>Sylmar:</strong><br/>12239 Foothill Blvd, Sylmar, CA<br/>(818) 897-2079</p>
+    <p><strong>Bakersfield:</strong><br/>530 California Ave, Bakersfield, CA<br/>(661) 381-4722</p>
+    <p><strong>Hours:</strong><br/>Sylmar: 6AM–5PM<br/>Bakersfield: 8AM–5PM</p>
+  </div>
+
+  <div class="panel">
+    <h2>Graciana Tortilla</h2>
+    <p>Est. 1967</p>
+    <p>Follow us on:</p>
+    <ul>
+      <li>Facebook: @GRACIANATORTILLAFACTORY</li>
+      <li>Instagram: @GRACIANATORTILLAFACTORY</li>
+      <li>Website: gracianatortillafactory.com</li>
+    </ul>
+  </div>
+
+  <div class="panel">
+    <h2>Flour Tortilla</h2>
+    <h3>Specialty</h3>
+    <ul>
+      <li>Wheat, Spinach, Tomato, Chipotle</li>
+      <li>Garlic & Herb, Achiote, Charcoal</li>
+      <li>Curry & More</li>
+    </ul>
+    <h3>Sizes</h3>
+    <ul>
+      <li>6" to 14", Sonora Style</li>
+    </ul>
+  </div>
+
+  <div class="panel">
+    <h2>Corn Tortilla</h2>
+    <h3>Masa Types</h3>
+    <ul>
+      <li>White, Yellow, Blue, Tamale</li>
+    </ul>
+    <h3>Chip Cuts</h3>
+    <ul>
+      <li>Pre-cut, Colored Chips (Red, Green, Blue)</li>
+    </ul>
+    <h3>Regular</h3>
+    <ul>
+      <li>6", 4"–4½" mini, Enchilada sizes</li>
+    </ul>
+  </div>
+
+  <div class="panel">
+    <h2>Tamales & More</h2>
+    <h3>Tamales</h3>
+    <ul>
+      <li>Beef, Chicken, Pork, Veggie</li>
+      <li>Cheese, Sweet</li>
+    </ul>
+    <h3>Other Items</h3>
+    <ul>
+      <li>Chiles Rellenos, Salsas</li>
+      <li>Telera Bread, Burger Buns</li>
+      <li>Sopes, Dressings, Tostadas</li>
+    </ul>
   </div>
 </div>
 
 <div class="nav-buttons">
-  <button onclick="togglePage(-1)">⬅ Prev</button>
-  <button onclick="togglePage(1)">Next ➡</button>
+  <button onclick="scrollToPrevious()">⬅ Prev</button>
+  <button onclick="scrollToNext()">Next ➡</button>
 </div>
 
 <script>
-  let currentPage = 0;
-  const totalPanels = 2; // 2 pages, each with 3 panels
+  let currentPanel = 0;
+  const panels = document.querySelectorAll('.panel'); // All panels in the wrapper
+  const wrapper = document.getElementById('brochureWrapper');
 
-  function togglePage(direction) {
-    currentPage = (currentPage + direction + totalPanels) % totalPanels;
-    document.getElementById('brochureWrapper').style.transform = `translateX(-${currentPage * 100}vw)`; // Use X-axis for desktop scrolling
+  function scrollToNext() {
+    if (currentPanel < panels.length - 1) {
+      currentPanel++;
+    } else {
+      currentPanel = 0; // Loop back to the first panel
+    }
+    const panelWidth = panels[0].offsetWidth; // Get the width of one panel
+    wrapper.scrollTo({
+      left: currentPanel * panelWidth,
+      behavior: 'smooth',
+    });
+  }
+
+  function scrollToPrevious() {
+    if (currentPanel > 0) {
+      currentPanel--;
+    } else {
+      currentPanel = panels.length - 1; // Loop to the last panel
+    }
+    const panelWidth = panels[0].offsetWidth;
+    wrapper.scrollTo({
+      left: currentPanel * panelWidth,
+      behavior: 'smooth',
+    });
   }
 
   // Swipe gesture support
@@ -255,8 +273,8 @@
   document.addEventListener('touchend', function (e) {
     touchEndX = e.changedTouches[0].screenX;
     const threshold = 50;
-    if (touchEndX < touchStartX - threshold) togglePage(1);  // Swipe left to go forward
-    if (touchEndX > touchStartX + threshold) togglePage(-1); // Swipe right to go back
+    if (touchEndX < touchStartX - threshold) scrollToNext();  // Swipe left to go forward
+    if (touchEndX > touchStartX + threshold) scrollToPrevious(); // Swipe right to go back
   });
 </script>
 
