--- a/index.html
+++ b/index.html
@@ -123,8 +123,16 @@
 </div>
 
 <div class="nav-buttons">
-  <button onclick="scrollToPrevious()">⬅</button>
-  <button onclick="scrollToNext()">➡</button>
+<button onclick="scrollToPrevious()" aria-label="Previous">
+  <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+    <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+  </svg>
+</button>
+<button onclick="scrollToNext()" aria-label="Next">
+  <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+    <path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z"/>
+  </svg>
+</button>
 </div>
 
 <script>
