--- a/index.html
+++ b/index.html
@@ -92,6 +92,21 @@
      cursor: pointer;
      transition: transform 0.3s ease, color 0.3s ease, backdrop-filter 0.3s ease;
    }
+    .panel::before {
+     content: "";
+     position: absolute;
+     inset: 0;
+     background: rgba(255, 255, 255, 0.3);
+     backdrop-filter: blur(10px);
+     z-index: 0;
+     border-radius: var(--radius);
+   }
+
+.panel > * {
+  position: relative;
+  z-index: 1;
+}
+
 
 .nav-buttons button:hover {
   transform: scale(1.3);
@@ -136,61 +151,72 @@
 </div>
 
 <script>
-  const originalPanels = [
-    {
-      title: "Graciana Tortilla",
-      content: `<p>Est. 1967</p>
-      <p>Follow us on:</p>
-      <ul>
-        <li>Facebook: @GRACIANATORTILLAFACTORY</li>
-        <li>Instagram: @GRACIANATORTILLAFACTORY</li>
-        <li>Website: gracianatortillafactory.com</li>
-      </ul>`
-    },
-    {
-      title: "Visit Us",
-      content: `<p><strong>Sylmar:</strong><br/>12239 Foothill Blvd, Sylmar, CA<br/>(818) 897-2079</p>
-      <p><strong>Bakersfield:</strong><br/>530 California Ave, Bakersfield, CA<br/>(661) 381-4722</p>
-      <p><strong>Hours:</strong><br/>Sylmar: 6AM–5PM<br/>Bakersfield: 8AM–5PM</p>`
-    },
-    {
-      title: "Flour Tortilla",
-      content: `<h3>Specialty</h3>
-      <ul><li>Wheat, Spinach, Tomato, Chipotle</li><li>Garlic & Herb, Achiote, Charcoal</li><li>Curry & More</li></ul>
-      <h3>Sizes</h3><ul><li>6" to 14", Sonora Style</li></ul>`
-    },
-    {
-      title: "Corn Tortilla",
-      content: `<h3>Masa Types</h3><ul><li>White, Yellow, Blue, Tamale</li></ul>
-      <h3>Chip Cuts</h3><ul><li>Pre-cut, Colored Chips (Red, Green, Blue)</li></ul>
-      <h3>Regular</h3><ul><li>6", 4"–4½" mini, Enchilada sizes</li></ul>`
-    },
-    {
-      title: "Tamales & More",
-      content: `<h3>Tamales</h3><ul><li>Beef, Chicken, Pork, Veggie</li><li>Cheese, Sweet</li></ul>
-      <h3>Other Items</h3><ul><li>Chiles Rellenos, Salsas</li><li>Telera Bread, Burger Buns</li><li>Sopes, Dressings, Tostadas</li></ul>`
-    },
-    {
-      title: "Spices",
-      content: `<ul>
-        <li>Black & White Pepper</li><li>Cumin (Whole & Ground)</li>
-        <li>Oregano, Paprika</li><li>Garlic Powder & Salt</li>
-        <li>Cinnamon (Whole & Ground)</li><li>Tajin, Piloncillo</li>
-        <li>Sesame Seeds</li><li>Dried Peppers: Guajillo, Arbol, Puya, etc.</li>
-        <li>Spicy Peanuts, Garbanzos</li><li>Mangos w/ Chamoy, Chicharrones</li>
-      </ul>`
-    }
-  ];
+const originalPanels = [
+  {
+    title: "Graciana Tortilla",
+    background: "url('https://plus.unsplash.com/premium_photo-1672201106204-58e9af7a2888?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Z3JhZGllbnQlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww') center/cover no-repeat",
+    content: `<p>Est. 1967</p>
+    <p>Follow us on:</p>
+    <ul>
+      <li>Facebook: @GRACIANATORTILLAFACTORY</li>
+      <li>Instagram: @GRACIANATORTILLAFACTORY</li>
+      <li>Website: gracianatortillafactory.com</li>
+    </ul>`
+  },
+  {
+    title: "Visit Us",
+    background: "url('images/locations.jpg') center/cover no-repeat",
+    content: `<p><strong>Sylmar:</strong><br/>12239 Foothill Blvd, Sylmar, CA<br/>(818) 897-2079</p>
+    <p><strong>Bakersfield:</strong><br/>530 California Ave, Bakersfield, CA<br/>(661) 381-4722</p>
+    <p><strong>Hours:</strong><br/>Sylmar: 6AM–5PM<br/>Bakersfield: 8AM–5PM</p>`
+  },
+  {
+    title: "Flour Tortilla",
+    background: "url('images/flour.jpg') center/cover no-repeat",
+    content: `<h3>Specialty</h3>
+    <ul><li>Wheat, Spinach, Tomato, Chipotle</li><li>Garlic & Herb, Achiote, Charcoal</li><li>Curry & More</li></ul>
+    <h3>Sizes</h3><ul><li>6" to 14", Sonora Style</li></ul>`
+  },
+  {
+    title: "Corn Tortilla",
+    background: "url('images/corn.jpg') center/cover no-repeat",
+    content: `<h3>Masa Types</h3><ul><li>White, Yellow, Blue, Tamale</li></ul>
+    <h3>Chip Cuts</h3><ul><li>Pre-cut, Colored Chips (Red, Green, Blue)</li></ul>
+    <h3>Regular</h3><ul><li>6", 4"–4½" mini, Enchilada sizes</li></ul>`
+  },
+  {
+    title: "Tamales & More",
+    background: "url('images/tamales.jpg') center/cover no-repeat",
+    content: `<h3>Tamales</h3><ul><li>Beef, Chicken, Pork, Veggie</li><li>Cheese, Sweet</li></ul>
+    <h3>Other Items</h3><ul><li>Chiles Rellenos, Salsas</li><li>Telera Bread, Burger Buns</li><li>Sopes, Dressings, Tostadas</li></ul>`
+  },
+  {
+    title: "Spices",
+    background: "url('images/spices.jpg') center/cover no-repeat",
+    content: `<ul>
+      <li>Black & White Pepper</li><li>Cumin (Whole & Ground)</li>
+      <li>Oregano, Paprika</li><li>Garlic Powder & Salt</li>
+      <li>Cinnamon (Whole & Ground)</li><li>Tajin, Piloncillo</li>
+      <li>Sesame Seeds</li><li>Dried Peppers: Guajillo, Arbol, Puya, etc.</li>
+      <li>Spicy Peanuts, Garbanzos</li><li>Mangos w/ Chamoy, Chicharrones</li>
+    </ul>`
+  }
+];
+
 
   const wrapper = document.getElementById('brochureWrapper');
   let currentIndex = 3; // Starts at first real panel after clones
 
-  function createPanel(panelData) {
-    const div = document.createElement('div');
-    div.className = 'panel';
-    div.innerHTML = `<h2>${panelData.title}</h2>${panelData.content}`;
-    return div;
+function createPanel(panelData) {
+  const div = document.createElement('div');
+  div.className = 'panel';
+  div.innerHTML = `<h2>${panelData.title}</h2>${panelData.content}`;
+  if (panelData.background) {
+    div.style.background = panelData.background;
+    div.style.position = "relative";
   }
+  return div;
+}
 
   function setupCarousel() {
     wrapper.innerHTML = ''; // Clear placeholder
