--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     :root {
       --bg-main: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
       --panel-glass: rgba(255, 255, 255, 0.15);
-      --text-dark: #2c2c2c;
-      --accent: #ff5e3a;
+      --text-light: #ffffff;
+      --accent: #ffb285;
       --radius: 20px;
     }
 
@@ -19,7 +19,7 @@
       margin: 0;
       font-family: 'Inter', sans-serif;
       background: var(--bg-main);
-      color: var(--text-dark);
+      color: var(--text-light);
       overflow-x: hidden;
       touch-action: pan-y;
     }
@@ -38,6 +38,8 @@
     .panel {
       flex: 0 0 100vw;
       height: 100%;
+      position: relative;
+      color: var(--text-light);
       background: var(--panel-glass);
       backdrop-filter: blur(15px);
       border-radius: var(--radius);
@@ -45,6 +47,29 @@
       padding: 2rem;
       overflow-y: auto;
       border: 1px solid rgba(255, 255, 255, 0.3);
+    }
+
+    .panel::before,
+    .panel::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      border-radius: var(--radius);
+      z-index: 0;
+    }
+
+    .panel::before {
+      background: rgba(255, 255, 255, 0.3);
+      backdrop-filter: blur(10px);
+    }
+
+    .panel::after {
+      background: rgba(0, 0, 0, 0.4); /* Dark overlay */
+    }
+
+    .panel > * {
+      position: relative;
+      z-index: 1;
     }
 
     h2 {
@@ -57,13 +82,17 @@
     h3 {
       margin-top: 1.5rem;
       font-size: 1.1rem;
-      color: #444;
+      color: #ffebd6;
     }
 
     ul {
       padding-left: 1.2rem;
       list-style: disc;
       line-height: 1.6;
+    }
+
+    li, p {
+      color: #f5f5f5;
     }
 
     p {
@@ -81,41 +110,24 @@
     }
 
     .nav-buttons button {
-     all: unset;
-     pointer-events: auto;
-     font-size: 2.5rem;
-     font-weight: 700;
-     color: rgba(44, 44, 44, 0.7);
-     backdrop-filter: blur(5px);
-     border-radius: 50%;
-     padding: 0.2rem 0.6rem;
-     cursor: pointer;
-     transition: transform 0.3s ease, color 0.3s ease, backdrop-filter 0.3s ease;
-   }
-    .panel::before {
-     content: "";
-     position: absolute;
-     inset: 0;
-     background: rgba(255, 255, 255, 0.3);
-     backdrop-filter: blur(10px);
-     z-index: 0;
-     border-radius: var(--radius);
-   }
+      all: unset;
+      pointer-events: auto;
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: rgba(255, 255, 255, 0.7);
+      backdrop-filter: blur(5px);
+      border-radius: 50%;
+      padding: 0.2rem 0.6rem;
+      cursor: pointer;
+      transition: transform 0.3s ease, color 0.3s ease, backdrop-filter 0.3s ease;
+    }
 
-.panel > * {
-  position: relative;
-  z-index: 1;
-}
+    .nav-buttons button:hover {
+      transform: scale(1.3);
+      color: var(--accent);
+      backdrop-filter: blur(10px);
+    }
 
-
-.nav-buttons button:hover {
-  transform: scale(1.3);
-  color: var(--accent);
-  backdrop-filter: blur(10px);
-}
-
-
-    /* Desktop */
     @media (min-width: 1024px) {
       .panel {
         flex: 0 0 33.333vw;
@@ -132,29 +144,28 @@
 
 <div class="carousel-container">
   <div class="wrapper" id="brochureWrapper">
-    <!-- Panels will be cloned via JS -->
     <div class="panel">Loading...</div>
   </div>
 </div>
 
 <div class="nav-buttons">
-<button onclick="scrollToPrevious()" aria-label="Previous">
-  <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-    <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
-  </svg>
-</button>
-<button onclick="scrollToNext()" aria-label="Next">
-  <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-    <path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z"/>
-  </svg>
-</button>
+  <button onclick="scrollToPrevious()" aria-label="Previous">
+    <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+    </svg>
+  </button>
+  <button onclick="scrollToNext()" aria-label="Next">
+    <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z"/>
+    </svg>
+  </button>
 </div>
 
 <script>
 const originalPanels = [
   {
     title: "Graciana Tortilla",
-    background: "url('https://plus.unsplash.com/premium_photo-1672201106204-58e9af7a2888?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Z3JhZGllbnQlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww') center/cover no-repeat",
+    background: "url('https://i.postimg.cc/QNJgyhCb/Brochure-HTML-Panel-Page-1.png') center/cover no-repeat",
     content: `<p>Est. 1967</p>
     <p>Follow us on:</p>
     <ul>
@@ -165,14 +176,14 @@ const originalPanels = [
   },
   {
     title: "Visit Us",
-    background: "url('images/locations.jpg') center/cover no-repeat",
+    background: "url('https://i.postimg.cc/9f9Ztjsy/Brochure-HTML-Panel-Page-2.png') center/cover no-repeat",
     content: `<p><strong>Sylmar:</strong><br/>12239 Foothill Blvd, Sylmar, CA<br/>(818) 897-2079</p>
     <p><strong>Bakersfield:</strong><br/>530 California Ave, Bakersfield, CA<br/>(661) 381-4722</p>
     <p><strong>Hours:</strong><br/>Sylmar: 6AM–5PM<br/>Bakersfield: 8AM–5PM</p>`
   },
   {
     title: "Flour Tortilla",
-    background: "url('images/flour.jpg') center/cover no-repeat",
+    background: "url('https://i.postimg.cc/tgFnnNV5/Brochure-HTML-Panel-Page-3.png') center/cover no-repeat",
     content: `<h3>Specialty</h3>
     <ul><li>Wheat, Spinach, Tomato, Chipotle</li><li>Garlic & Herb, Achiote, Charcoal</li><li>Curry & More</li></ul>
     <h3>Sizes</h3><ul><li>6" to 14", Sonora Style</li></ul>`
@@ -203,9 +214,8 @@ const originalPanels = [
   }
 ];
 
-
-  const wrapper = document.getElementById('brochureWrapper');
-  let currentIndex = 3; // Starts at first real panel after clones
+const wrapper = document.getElementById('brochureWrapper');
+let currentIndex = 3;
 
 function createPanel(panelData) {
   const div = document.createElement('div');
@@ -213,71 +223,67 @@ function createPanel(panelData) {
   div.innerHTML = `<h2>${panelData.title}</h2>${panelData.content}`;
   if (panelData.background) {
     div.style.background = panelData.background;
-    div.style.position = "relative";
   }
   return div;
 }
 
-  function setupCarousel() {
-    wrapper.innerHTML = ''; // Clear placeholder
-    const panelsToRender = [];
+function setupCarousel() {
+  wrapper.innerHTML = '';
+  const panelsToRender = [];
 
-    // Clone last 3 to front
-    const clonesBefore = originalPanels.slice(-3).map(createPanel);
-    // Real panels
-    const realPanels = originalPanels.map(createPanel);
-    // Clone first 3 to end
-    const clonesAfter = originalPanels.slice(0, 3).map(createPanel);
+  const clonesBefore = originalPanels.slice(-3).map(createPanel);
+  const realPanels = originalPanels.map(createPanel);
+  const clonesAfter = originalPanels.slice(0, 3).map(createPanel);
 
-    panelsToRender.push(...clonesBefore, ...realPanels, ...clonesAfter);
-    panelsToRender.forEach(panel => wrapper.appendChild(panel));
+  panelsToRender.push(...clonesBefore, ...realPanels, ...clonesAfter);
+  panelsToRender.forEach(panel => wrapper.appendChild(panel));
 
-    updateTransform();
+  updateTransform();
+}
+
+function updateTransform() {
+  const panel = wrapper.querySelector('.panel');
+  if (!panel) return;
+  const panelWidth = panel.offsetWidth;
+  wrapper.style.transform = `translateX(-${currentIndex * panelWidth}px)`;
+}
+
+function scrollToNext() {
+  const totalPanels = wrapper.children.length;
+  currentIndex++;
+  updateTransform();
+
+  if (currentIndex === totalPanels - 3) {
+    setTimeout(() => {
+      currentIndex = 3;
+      wrapper.style.transition = 'none';
+      updateTransform();
+      wrapper.offsetHeight;
+      wrapper.style.transition = 'transform 0.4s ease-in-out';
+    }, 400);
   }
+}
 
-  function updateTransform() {
-    const panel = wrapper.querySelector('.panel');
-    if (!panel) return;
-    const panelWidth = panel.offsetWidth;
-    wrapper.style.transform = `translateX(-${currentIndex * panelWidth}px)`;
+function scrollToPrevious() {
+  currentIndex--;
+  updateTransform();
+
+  if (currentIndex === 2) {
+    setTimeout(() => {
+      currentIndex = originalPanels.length + 2;
+      wrapper.style.transition = 'none';
+      updateTransform();
+      wrapper.offsetHeight;
+      wrapper.style.transition = 'transform 0.4s ease-in-out';
+    }, 400);
   }
+}
 
-  function scrollToNext() {
-    const totalPanels = wrapper.children.length;
-    currentIndex++;
-    updateTransform();
-
-    if (currentIndex === totalPanels - 3) {
-      setTimeout(() => {
-        currentIndex = 3;
-        wrapper.style.transition = 'none';
-        updateTransform();
-        wrapper.offsetHeight; // force reflow
-        wrapper.style.transition = 'transform 0.4s ease-in-out';
-      }, 400);
-    }
-  }
-
-  function scrollToPrevious() {
-    currentIndex--;
-    updateTransform();
-
-    if (currentIndex === 2) {
-      setTimeout(() => {
-        currentIndex = originalPanels.length + 2;
-        wrapper.style.transition = 'none';
-        updateTransform();
-        wrapper.offsetHeight;
-        wrapper.style.transition = 'transform 0.4s ease-in-out';
-      }, 400);
-    }
-  }
-
-  window.addEventListener('resize', updateTransform);
-  window.addEventListener('load', () => {
-    setupCarousel();
-    updateTransform();
-  });
+window.addEventListener('resize', updateTransform);
+window.addEventListener('load', () => {
+  setupCarousel();
+  updateTransform();
+});
 </script>
 
 </body>
