--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -60,7 +61,7 @@
 
     .panel::before {
       background: rgba(255, 255, 255, 0.3);
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(0px);
     }
 
     .panel::after {
@@ -182,35 +183,36 @@ const originalPanels = [
     <p><strong>Hours:</strong><br/>Sylmar: 6AM–5PM<br/>Bakersfield: 8AM–5PM</p>`
   },
   {
-    title: "Flour Tortilla",
+    title: "Spices",
     background: "url('https://i.postimg.cc/tgFnnNV5/Brochure-HTML-Panel-Page-3.png') center/cover no-repeat",
-    content: `<h3>Specialty</h3>
-    <ul><li>Wheat, Spinach, Tomato, Chipotle</li><li>Garlic & Herb, Achiote, Charcoal</li><li>Curry & More</li></ul>
-    <h3>Sizes</h3><ul><li>6" to 14", Sonora Style</li></ul>`
+    content: `<h3>fix later</h3>
+    <ul><li>fix later</li><li>Curry & More</li></ul>
+    <h3>placeholder</h3><ul><li>6" to 14", Sonora Style</li></ul>`
+  },
+  {
+    title: "Flour Tortilla",
+    background: "url('https://i.postimg.cc/jj3rRGMn/Brochure-HTML-Panel-Page-4.png') center/cover no-repeat",
+    content: `<ul>
+      <li>Placeholder</li><li>Cumin (Whole & Ground)</li>
+      <li>ABC123</li>
+      <li>ABC123</li><li>Tajin, Piloncillo</li>
+      <li>ABC123</li>
+      <li>ABC123</li>
+    </ul>`
   },
   {
     title: "Corn Tortilla",
-    background: "url('images/corn.jpg') center/cover no-repeat",
+    background: "url('https://i.postimg.cc/C1WTqbTF/Brochure-HTML-Panel-Page-5.png') center/cover no-repeat",
     content: `<h3>Masa Types</h3><ul><li>White, Yellow, Blue, Tamale</li></ul>
     <h3>Chip Cuts</h3><ul><li>Pre-cut, Colored Chips (Red, Green, Blue)</li></ul>
     <h3>Regular</h3><ul><li>6", 4"–4½" mini, Enchilada sizes</li></ul>`
   },
+
   {
     title: "Tamales & More",
-    background: "url('images/tamales.jpg') center/cover no-repeat",
+    background: "url('https://i.postimg.cc/przNYyRK/Brochure-HTML-Panel-Page-6.png') center/cover no-repeat",
     content: `<h3>Tamales</h3><ul><li>Beef, Chicken, Pork, Veggie</li><li>Cheese, Sweet</li></ul>
     <h3>Other Items</h3><ul><li>Chiles Rellenos, Salsas</li><li>Telera Bread, Burger Buns</li><li>Sopes, Dressings, Tostadas</li></ul>`
-  },
-  {
-    title: "Spices",
-    background: "url('images/spices.jpg') center/cover no-repeat",
-    content: `<ul>
-      <li>Black & White Pepper</li><li>Cumin (Whole & Ground)</li>
-      <li>Oregano, Paprika</li><li>Garlic Powder & Salt</li>
-      <li>Cinnamon (Whole & Ground)</li><li>Tajin, Piloncillo</li>
-      <li>Sesame Seeds</li><li>Dried Peppers: Guajillo, Arbol, Puya, etc.</li>
-      <li>Spicy Peanuts, Garbanzos</li><li>Mangos w/ Chamoy, Chicharrones</li>
-    </ul>`
   }
 ];
 
