--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
       flex-wrap: nowrap;
       justify-content: space-around;
       gap: 2rem;
-      background: white;
+      background: rgba(255,255,240,0.5);
+      filter: drop-shadow(15px 25px 20px black);
       padding: 1.5rem;
       border-radius: 10px;
       max-width: 100%;
@@ -164,14 +165,17 @@
 
     .location-card h1 {
       color: #eb7515;
-      font-size: 1.5rem;
+      filter: drop-shadow(2px 3px 7px brown);
+      font-size: 2.5rem;
       margin-bottom: 0.5rem;
     }
 
     .location-card h3 {
       color: #eb7515;
+      filter: drop-shadow(2px 3px 7px brown);
       margin-top: 1rem;
-      font-size: 1.1rem;
+      margin-bottom: 0.5rem;
+      font-size: 2.5rem;
     }
 
     }
