--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -65,7 +64,7 @@
     }
 
     .panel::after {
-      background: rgba(0, 0, 0, 0.4); /* Dark overlay */
+      background: rgba(0, 0, 0, 0.4);
     }
 
     .panel > * {
@@ -131,19 +130,9 @@
       backdrop-filter: blur(10px);
     }
 
-    @media (min-width: 1024px) {
-      .panel {
-        flex: 0 0 33.333vw;
-        height: 100vh;
-      }
-
-      .wrapper {
-        transition: transform 0.4s ease-in-out;
-      }
-     .locations {
+    .locations {
       display: flex;
-      flex-wrap: nowrap;
-      justify-content: space-around;
+      flex-direction: column;
       gap: 2rem;
       background: rgba(255,255,240,0.5);
       filter: drop-shadow(15px 25px 20px black);
@@ -153,7 +142,6 @@
     }
 
     .location-card {
-      flex: 0 0 auto;
       text-align: center;
       color: black;
       min-width: 220px;
@@ -164,20 +152,35 @@
     }
 
     .location-card h1 {
-      color: #eb7515;
+      color: #ff821c;
       filter: drop-shadow(2px 3px 7px brown);
       font-size: 2.5rem;
       margin-bottom: 0.5rem;
     }
 
     .location-card h3 {
-      color: #eb7515;
+      color: #ff821c;
       filter: drop-shadow(2px 3px 7px brown);
       margin-top: 1rem;
       margin-bottom: 0.5rem;
       font-size: 2.5rem;
     }
 
+    @media (min-width: 1024px) {
+      .panel {
+        flex: 0 0 33.333vw;
+        height: 100vh;
+      }
+
+      .locations {
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: nowrap;
+      }
+
+      .location-card {
+        flex: 0 0 auto;
+      }
     }
   </style>
 </head>
@@ -218,37 +221,37 @@ const originalPanels = [
     `
   },
   {
-  title: "Visit Us",
-  background: "url('https://i.postimg.cc/9f9Ztjsy/Brochure-HTML-Panel-Page-2.png') center/cover no-repeat",
-content: `
-  <div class="locations">
-    <div class="location-card">
-      <h1>Sylmar<br/>Location</h1>
-      <p>
-        12239 Foothill Blvd,<br/>Sylmar, CA<br/>
-        (818) 897-2079
-      </p>
-      <h3>Hours</h3>
-      <p>
-        Mon - Sat<br/>
-        6:00AM - 5:00PM
-      </p>
-    </div>
+    title: "Visit Us",
+    background: "url('https://i.postimg.cc/9f9Ztjsy/Brochure-HTML-Panel-Page-2.png') center/cover no-repeat",
+    content: `
+      <div class="locations">
+        <div class="location-card">
+          <h1>Sylmar<br/>Location</h1>
+          <p>
+            12239 Foothill Blvd,<br/>Sylmar, CA<br/>
+            (818) 897-2079
+          </p>
+          <h3>Hours</h3>
+          <p>
+            Mon - Sat<br/>
+            6:00AM - 5:00PM
+          </p>
+        </div>
 
-    <div class="location-card">
-      <h1>Bakersfield<br/>Location</h1>
-      <p>
-        530 California Ave,<br/>Bakersfield, CA<br/>
-        (661) 381-4722
-      </p>
-      <h3>Hours</h3>
-      <p>
-        Mon - Sat<br/>
-        8:00AM - 5:00PM
-      </p>
-    </div>
-  </div>
-`
+        <div class="location-card">
+          <h1>Bakersfield<br/>Location</h1>
+          <p>
+            530 California Ave,<br/>Bakersfield, CA<br/>
+            (661) 381-4722
+          </p>
+          <h3>Hours</h3>
+          <p>
+            Mon - Sat<br/>
+            8:00AM - 5:00PM
+          </p>
+        </div>
+      </div>
+    `
   },
   {
     title: "Spices",
@@ -316,7 +319,6 @@ content: `
     `
   }
 ];
-
 
 const wrapper = document.getElementById('brochureWrapper');
 let currentIndex = 3;
